[project]
name = "beatborders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pycountry>=24.6.1",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
]
